--- a/index.gohtml
+++ b/index.gohtml
@@ -49,12 +49,11 @@
     </style>
   </head>
   <body style="background-color:{{.Color}};text-align: center;font-family: {{.Font}}">
-    <img src="{{.Url}}" style="width: 30%;margin-bottom: {{.ImgMargin}}; margin-top: {{.ImgMargin}}">
     <h1>{{.Title}}</h1>
     <p>{{.Instructions}}</p>
     
     <form action="/flip" method="post" id="dms">
-      <button class="button-52" name="dms" value="">Deadman Switch</button>
+      <button class="button-52" name="dms" value="">Reservation Switch</button>
     </form>
 
     <div class="container">
